--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,1 +1,9 @@
 <h1>Eat-Da-Burger!</h1>
+
+<ul>
+    {{#each burgers}}
+        <li>
+            <p>{{this.burger_name}}</p>
+        </li>
+    {{/each}}
+</ul>
