adding burger block, so that I can add devour it button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,8 +2,6 @@
 
 <ul>
     {{#each burgers}}
-        <li>
-            <p>{{this.burger_name}}</p>
-        </li>
+        {{> burgers/burger-block}}
     {{/each}}
 </ul>
