--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,3 +5,11 @@
         {{> burgers/burger-block}}
     {{/each}}
 </ul>
+
+<form class="create-form">
+    <div class="form-group">
+        <input type="text" id="new-burger-input" name="new-burger">
+    </div>
+
+    <button type="submit">Submit</button>
+</form>
