--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,9 @@
 
 <ul>
     {{#each burgers}}
-        {{> burgers/burger-block}}
+        {{#unless devoured}}
+            {{> burgers/burger-block}}
+        {{/unless}}
     {{/each}}
 </ul>
 
