adding separate list for devoured burgers, hiding button for devoured burgers

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,5 +1,8 @@
 <li>
     {{id}}. {{burger_name}}
 
+    {{#if devoured}}
+    {{else}}
     <button class="devour-it" data-id="{{id}}">Devour it!</button>
+    {{/if}}
 </li>
