--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,6 +8,14 @@
     {{/each}}
 </ul>
 
+<ul>
+    {{#each burgers}}
+        {{#if devoured}}
+            {{> burgers/burger-block}}
+        {{/if}}
+    {{/each}}
+</ul>
+
 <form class="create-form">
     <div class="form-group">
         <input type="text" id="new-burger-input" name="new-burger">
